--- a/client/src/components/NewReview/NewReview.css
+++ b/client/src/components/NewReview/NewReview.css
@@ -1,5 +1,5 @@
-.new-expense {
-    background-color: #4b4b4b;
+.new-review {
+    background-color: rgb(31, 31, 31);
     padding: 1rem;
     margin: 2rem auto;
     width: 50rem;
@@ -9,30 +9,30 @@
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
   }
   
-.new-expense button {
+.new-review button {
     font: inherit;
     cursor: pointer;
     padding: 1rem 2rem;
-    border: 1px solid #40005d;
-    background-color: #40005d;
+    border: 1px solid #4b4b4b;
+    background-color: #4b4b4b;
     color: white;
     border-radius: 12px;
     margin-right: 1rem;
 }
 
-.new-expense button:hover,
-.new-expense button:active {
-    background-color: #510674;
-    border-color: #510674;
+.new-review button:hover,
+.new-review button:active {
+    background-color: #4b4b4b;
+    border-color: #4b4b4b;
 }
 
-.new-expense button.alternative {
+.new-review button.alternative {
     color: #220131;
     border-color: transparent;
     background-color: transparent;
 }
 
-.new-expense button.alternative:hover,
-.new-expense button.alternative:active {
+.new-review button.alternative:hover,
+.new-review button.alternative:active {
     background-color: #ddb3f8;
 }
