--- a/client/src/components/Reviews/ReviewItem.css
+++ b/client/src/components/Reviews/ReviewItem.css
@@ -1,4 +1,4 @@
-.expense-item {
+.review-item {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -7,7 +7,7 @@
     background-color: #4b4b4b;
   }
 
-.expense-item__description {
+.review-item__description {
     display: flex;
     justify-content: space-between;
     gap: 1rem;
@@ -34,11 +34,17 @@
     color: white;
 }
 
-.expense-item h2 {
-    
+.review-item__genre {
+    color: #3a3a3a;
+    font-size: 1rem;
+    font-weight: 200;
+    font-style: italic;
+    flex: 1;
+    margin: 0 1rem;
+    color: rgba(24, 206, 193, 0.989);
 }
 
-.expense-item__price {
+.review-item__score {
     min-width: 70px;
     min-height: 70px;
     font-size: 1rem;
@@ -64,33 +70,30 @@
     background-color: #8400ff;
 }
 
-.review-item__info{
-}
-
-.expense-item__cover{
+.review-item__cover{
     max-width: 96px;
     max-height: 96px;
     border-radius: 12px;
 }
 
 @media (min-width: 580px) {
-    .expense-item__description {
+    .review-item__description {
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
         flex: 1;
     }
 
-    .expense-item__description h2 {
+    .review-item__description h2 {
         font-size: 1.25rem;
     }
 
-    .expense-item__price {
-        font-size: 1.25rem;
+    .review-item__score {
+        font-size: 1.5rem;
         position: relative;
     }
 
-    .expense-item__price p{
+    .review-item__score p{
         margin: 0;
         position: absolute;               
         top: 50%;                        
